# Kinova_gen2_rl

./: acutual_teleop.py  frames_2026-04-22_09.18.03.gv  frames_2026-04-22_15.10.15.gv  frames_2026-04-23_11.12.06.gv  go_script.py  j2n6s300.urdf  model.urdf  model2.urdf  moveit_go_to.py  robot.urdf  save.py  scoop.py  scooping_trajectory.py  sdk_test.py  setup.sh  setup_sim.sh  teleop.py  todo.sh
src/: sample.py
src/click_pointer/: CMakeLists.txt  package.xml
src/click_pointer/scripts/: algo.py  click_pointer.py  utils.py
src/kinova-ros2/: README.md
src/kinova-ros2/j2s6s200_moveit_config/: CMakeLists.txt  package.xml
src/kinova-ros2/j2s6s200_moveit_config/config/: j2s6s200.srdf  joint_limits.yaml  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml
src/kinova-ros2/j2s6s200_moveit_config/launch/: gazebo.launch.py  j2s6s200_moveit.launch.py  real_moveit_launch.py
src/kinova-ros2/j2s6s200_moveit_config/scripts/: joint_state_relay.py  kinova_sdk_node.py  kinova_trajectory_bridge.py  scoop_action.py  trajectory_executor.py
src/kinova-ros2/j2s6s200_moveit_config/urdf/: j2s6s200.urdf.xacro
src/kinova-ros2/kinova_bringup/: CMakeLists.txt  elliptic_planner_plugin_description.xml  package.xml
src/kinova-ros2/kinova_bringup/include/: elliptic_planner_plugin.hpp
src/kinova-ros2/kinova_bringup/kinova_bringup/kinova_bringup/: feeding_node.py  kinova_sdk_node.py  trajectory_executor.py
src/kinova-ros2/kinova_bringup/launch/: feeding_system.launch.py  handeye_calibration.launch.py  kinova_robot_launch.py  moveit_robot_launch.py  real_moveit_launch.py  real_robot_launch.py  rviz_only.launch.py  sample.launch.py
src/kinova-ros2/kinova_bringup/moveit_resource/: controllers.yaml  controllers_real.yaml  handeye_calibration.rviz  j2n6s300.srdf  kinematics.yaml  ros2_controllers.yaml  rviz2_params.yaml  visualization.rviz
src/kinova-ros2/kinova_bringup/scripts/: benchmark_srht.py  convert_calibration.py  demo_feed_planner.py  elliptic_delivery.py  feed_recorder.py  feeding_executor_node.py  feeding_node.py  go_feed.py  go_to_prescoop.py  kinova_sdk_node.py  kinova_trajectory_bridge.py  mouth_feeding_planner.py  mouth_tracker_node.py  pick_laddoo_node.py  pointer_feed_planner.py  run_calibration.sh  sample.py  trajectory_executor.py
src/kinova-ros2/kinova_bringup/src/: elliptic_planner_plugin.cpp  sample.cpp
src/kinova-ros2/kinova_bringup/worlds/: feeding_scene.sdf
src/kinova-ros2/kinova_description/meshes/: robot.urdf
src/kinova-ros2/kinova_description/urdf/: j2n6s200.xacro  j2n6s300.xacro  kinova.gazebo
src/kinova-ros2/kinova_driver/include/kinova/: KinovaTypes.h
src/kinova-ros2/kinova_rl/: README.md  package.xml  setup.cfg  setup.py
src/kinova-ros2/kinova_rl/kinova_rl/: enjoy.py  jaco_reach_env.py  thoughts_node.py  train.py
src/kinova-ros2/kinova_rl/launch/: train_headless.launch.py
src/kinova_scoop_demo/: CMakeLists.txt  package.xml
src/kinova_scoop_demo/src/: scoop_node.cpp
src/mouth_tracking/: package.xml  setup.cfg  setup.py
src/mouth_tracking/mouth_tracking/: mouth_tracker.py  room_mapper.py  static_pointcloud.py
ws_moveit/: frames_2026-04-23_09.55.50.gv  frames_2026-04-23_10.37.12.gv
