<?xml version="1.0"?>
<package format="3">
  <name>kinova_bringup</name>
  <version>0.0.0</version>
  <description>Kinova j2n6s300 bringup — elliptic delivery planner plugin</description>
  <maintainer email="support@kinova.ca">Kinova Support</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>pluginlib</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>eigen3_cmake_module</depend>

  <exec_depend>python3-pinocchio</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
